--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "NODE_OPTIONS=--openssl-legacy-provider next dev",
-    "build": "next build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider next build",
     "start": "next start",
     "lint": "eslint . --fix"
   },
   "dependencies": {
     "firebase": "^10.3.0",
+    "firebase-admin": "^11.10.1",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
