--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.40.1",
     "firebase": "^10.3.0",
     "firebase-admin": "^11.10.1",
     "next": "9.4.4",
