--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@netlify/plugin-nextjs": "3.9.2",
     "firebase": "^10.3.0",
     "firebase-admin": "^11.10.1",
-    "next": "9.4.4",
+    "next": "^9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
